# mini-renderer

./: Cargo.toml
assets/meshes/: backpack.gltf
assets/shaders/: shader.wgsl  temp_shader.wgsl
examples/: main.rs
src/: device_handle.rs  instance_handle.rs  lib.rs  pipeline.rs  renderer.rs  surface_wrapper.rs
src/managers/: mod.rs  pipeline_manager.rs  resource_handle.rs  resource_manager.rs  shader_manager.rs
src/types/: instance.rs  material.rs  mesh.rs  mod.rs  model.rs  renderable.rs  shader.rs  texture.rs  transform.rs  vertex.rs
src/uniform/: mod.rs  observable_data.rs  uniform_buffer.rs
src/utils/: buffer.rs  handle.rs  mod.rs  mut_handle.rs  shader_reflect.rs
